# embeddedBoard

./: CMakeLists.txt  main.cpp
include/: camControl.hpp  render.h  utility.h  version_soft.hpp
src/: camControl.cpp  render.cpp  render.h  utility.cpp  utility.h
